--- a/index.html
+++ b/index.html
@@ -534,11 +534,11 @@
                 <div>
                     <h4 class="text-xl font-bold mb-4">تواصل معنا</h4>
                     <div class="space-y-3">
-                        <a href="https://wa.me/YOUR_WHATSAPP_NUMBER" target="_blank" class="block opacity-90 hover:opacity-100">
+                        <a href="https://wa.me/967738382876" target="_blank" class="block opacity-90 hover:opacity-100">
                             <i class="fab fa-whatsapp ml-2"></i>
                             واتساب
                         </a>
-                        <a href="tel:+967XXXXXXXXX" class="block opacity-90 hover:opacity-100">
+                        <a href="tel:+967774786786" class="block opacity-90 hover:opacity-100">
                             <i class="fas fa-phone ml-2"></i>
                             مكالمة مباشرة
                         </a>
