--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Meta Pixel Code -->
+<script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src='https://connect.facebook.net/en_US/fbevents.js';
+  s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script');
+
+  fbq('init', '1343508243402563'); 
+  fbq('track', 'PageView');
+</script>
+<noscript>
+  <img height="1" width="1" style="display:none" 
+  src="https://www.facebook.com/tr?id=1343508243402563&ev=PageView&noscript=1"/>
+</noscript>
+<!-- End Meta Pixel Code -->
+
     <title>NASIM STORE - دليلك الشامل لاشتراكات ChatGPT Plus في اليمن 2024</title>
     <meta name="description" content="احصل على اشتراك ChatGPT Plus بأرخص سعر في اليمن - 4 دولار شهرياً فقط! خدمة موثوقة مع دعم فني ممتاز وطرق دفع محلية متنوعة من متجر نسيم">
     <meta name="keywords" content="اشتراك ChatGPT اليمن, ChatGPT Plus اليمن, شراء اشتراك GPT-4.5, اشتراك شهري شات جي بي تي, ChatGPT بسعر رخيص, NASIM STORE اشتراك GPT, اشتراك شات جي بي تي مدفوع, GPT-4.5 اليمن, خدمة ChatGPT اليمن, أسعار اشتراكات ChatGPT">
