--- a/index.html
+++ b/index.html
@@ -480,12 +480,12 @@
                 </p>
                 
                 <div class="flex flex-col sm:flex-row gap-6 justify-center">
-                    <a href="https://wa.me/YOUR_WHATSAPP_NUMBER" target="_blank" class="whatsapp-btn text-white px-8 py-4 rounded-lg font-bold text-lg hover:shadow-xl hover-scale inline-flex items-center justify-center pulse-animation">
+                    <a href="https://wa.me/967738382876" target="_blank" class="whatsapp-btn text-white px-8 py-4 rounded-lg font-bold text-lg hover:shadow-xl hover-scale inline-flex items-center justify-center pulse-animation">
                         <i class="fab fa-whatsapp ml-3 text-2xl"></i>
                         تواصل عبر واتساب
                     </a>
                     
-                    <a href="tel:+967XXXXXXXXX" class="call-btn text-white px-8 py-4 rounded-lg font-bold text-lg hover:shadow-xl hover-scale inline-flex items-center justify-center">
+                    <a href="tel:+967774786786" class="call-btn text-white px-8 py-4 rounded-lg font-bold text-lg hover:shadow-xl hover-scale inline-flex items-center justify-center">
                         <i class="fas fa-phone ml-3 text-2xl"></i>
                         اتصل بنا الآن
                     </a>
